hphp/hack/test/enum_atom/typing/atom_generic_validation.php.legacy_decl.exp
File "atom_generic_validation.php", line 14, characters 38-58:
The type TEnum must be a type constant or a reified generic in order to be used with __Atom (Typing[4395])
File "atom_generic_validation.php", line 42, characters 16-48:
Invalid type hint (Typing[4352])
  File "atom_generic_validation.php", line 42, characters 40-44:
  An abstract type constant is not allowed in this position.
  File "atom_generic_validation.php", line 23, characters 23-27:
  `TEnum` is abstract here.
File "atom_generic_validation.php", line 42, characters 16-48:
The type \Controller::TEnum must be a type constant or a reified generic in order to be used with __Atom (Typing[4395])
